[cleanup] disabled include tests against xgb master