@@ -31,3 +31,41 @@ if [ ${TASK} == "cmake-build" ]; then
     cmake ..
     make all || exit -1
 fi
+
+if [ ${TASK} == "xgb-cmake" ]; then
+    git clone --recursive https://github.com/dmlc/xgboost ../xgboost
+    rm -rf ../xgboost/rabit
+    cp -r ../rabit ../xgboost/rabit
+
+    set -e
+    # Build gtest via cmake
+    wget -nc https://github.com/google/googletest/archive/release-1.7.0.zip
+    unzip -n release-1.7.0.zip
+    mv googletest-release-1.7.0 gtest && cd gtest
+    cmake . && make
+    mkdir lib && mv libgtest.a lib
+    cd ..
+    rm -rf release-1.7.0.zip
+
+    # Build/test
+    rm -rf build
+    mkdir build && cd build
+    PLUGINS="-DPLUGIN_LZ4=ON -DPLUGIN_DENSE_PARSER=ON"
+    cmake .. -DGOOGLE_TEST=ON -DGTEST_ROOT=$PWD/../gtest/ ${PLUGINS}
+    make
+    ./testxgboost
+    cd ..
+    rm -rf build
+fi
+
+if [ ${TASK} == "xgb-java-tests" ]; then
+    git clone --recursive https://github.com/dmlc/xgboost ../xgboost
+    rm -rf ../xgboost/rabit
+    cp -r ../rabit ../xgboost/rabit
+    echo "MAVEN_OPTS='-Xmx2g -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=512m -Dorg.slf4j.simpleLogger.defaultLogLevel=error'" > ~/.mavenrc
+    cd ../xgboost
+    set -e
+    cd jvm-packages
+    mvn -q clean install -DskipTests -Dmaven.test.skip
+    mvn -q test || exit -1
+fi
